--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,9 @@ ndarray = { version = "0.16", optional = true }
 tracing = "0.1"
 url = "2"
 
+[dev-dependencies]
+image = "0.25"
+tokio = { version = "1", features = ["full"] }
+
 [package.metadata.docs.rs]
 all-features = true
