--- a/ffmpeg-next/Cargo.toml
+++ b/ffmpeg-next/Cargo.toml
@@ -30,5 +30,5 @@ default = [
 libc     = "0.2"
 bitflags = "2.6"
 image    = { version = "0.25", optional = true }
-rsmpeg = { path = "/Users/admin/Workspace/rust/github.com/rsmpeg" }
+rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", features = ["ffmpeg7", "link_system_ffmpeg"] }
 
