--- a/ffmpeg/Cargo.toml
+++ b/ffmpeg/Cargo.toml
@@ -26,8 +26,5 @@ default = [
 ]
 
 [dependencies]
-libc     = "0.2"
-bitflags = "2.6"
-image    = { version = "0.25", optional = true }
-rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", features = ["ffmpeg7", "link_system_ffmpeg"] }
+rsmpeg = { git = "https://github.com/larksuite/rsmpeg", branch = "master", default-features = false }
 
