--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,26 +60,55 @@ jobs:
 
     env:
       FFMPEG_DOWNLOAD_URL: https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-full-shared.7z
+      VCPKG_ROOT: ${{ github.workspace }}/vcpkg
+      RUST_BACKTRACE: 1
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      # 添加 vcpkg 缓存
+      - name: Cache vcpkg
+        id: cache-vcpkg
+        uses: actions/cache@v3
+        with:
+          path: ${{ github.workspace }}/vcpkg
+          key: vcpkg-${{ runner.os }}
+
+      # 安装 vcpkg 和 FFmpeg
+      - name: Install vcpkg and FFmpeg
+        if: steps.cache-vcpkg.outputs.cache-hit != 'true'
+        shell: pwsh
+        run: |
+          git clone https://github.com/microsoft/vcpkg --depth 1
+          ./vcpkg/bootstrap-vcpkg.bat
+          ./vcpkg/vcpkg.exe install ffmpeg:x64-windows-static-md
+
+      - name: Install LLVM and Clang
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "10.0"
+          directory: ${{ github.workspace }}/clang
+
+      - name: Setup Environment
+        shell: pwsh
         run: |
           $VCINSTALLDIR = $(& "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe" -latest -property installationPath)
-          Add-Content $env:GITHUB_ENV "LIBCLANG_PATH=${VCINSTALLDIR}\VC\Tools\LLVM\x64\bin`n"
-          Invoke-WebRequest "${env:FFMPEG_DOWNLOAD_URL}" -OutFile ffmpeg-release-full-shared.7z
-          7z x ffmpeg-release-full-shared.7z
-          mv ffmpeg-*/* ffmpeg/
-          Add-Content $env:GITHUB_ENV "FFMPEG_DIR=${pwd}\ffmpeg`n"
-          Add-Content $env:GITHUB_PATH "${pwd}\ffmpeg\bin`n"
+          echo "LIBCLANG_PATH=${{ github.workspace }}/clang/lib" >> $env:GITHUB_ENV
+          echo "LLVM_CONFIG_PATH=${{ github.workspace }}/clang/bin/llvm-config" >> $env:GITHUB_ENV
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
-    
+        with:
+          target: x64-windows-msvc
+
       - name: Build
-        run: cargo build
+        env:
+          VCPKG_ROOT: ${{ github.workspace }}/vcpkg
+          LIBCLANG_PATH: ${{ github.workspace }}/clang/lib
+          LLVM_CONFIG_PATH: ${{ github.workspace }}/clang/bin/llvm-config
+        run: |
+          cargo build --no-default-features --features ffmpeg7,link_vcpkg_ffmpeg
 
   test:
     runs-on: ubuntu-latest
@@ -106,7 +135,7 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
  
       - name: Test
-        run: cargo +nightly test --all-features # TODO: Temporarily use nightly for tests.
+        run: cargo +nightly test --all-features
 
   lints:
     runs-on: ubuntu-latest
