--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,17 @@ jobs:
 
     strategy:
       matrix:
-        ffmpeg_version: ["6.0", "6.1", "7.0", "7.1"]
+        include:
+          # FFmpeg 6.x
+          - ffmpeg_version: "6.0"
+            feature: "ffmpeg6"
+          - ffmpeg_version: "6.1"
+            feature: "ffmpeg6"
+          # FFmpeg 7.x
+          - ffmpeg_version: "7.0"
+            feature: "ffmpeg7"
+          - ffmpeg_version: "7.1"
+            feature: "ffmpeg7"
       fail-fast: false
 
     steps:
@@ -34,7 +44,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
     
       - name: Build
-        run: cargo build
+        run: cargo build --no-default-features --features ${{ matrix.feature }} --verbose
 
   build-macos:
     name: build / macos / latest ffmpeg
