--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,14 @@ jobs:
   build-linux:
     name: build / linux / ffmpeg ${{ matrix.ffmpeg_version }}
     runs-on: ubuntu-latest
-    container: jrottenberg/ffmpeg:${{ matrix.ffmpeg_version }}-ubuntu2404
+    container: jrottenberg/ffmpeg:${{ matrix.ffmpeg_version }}-ubuntu
 
     strategy:
       matrix:
         include:
+          - # FFmpeg 5.x
+          - ffmpeg_version: "5.1"
+          - feature: "ffmpeg5"
           # FFmpeg 6.x
           - ffmpeg_version: "6.1"
             feature: "ffmpeg6"
