--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - # FFmpeg 5.x
+          # FFmpeg 5.x
           - ffmpeg_version: "5.1"
-          - feature: "ffmpeg5"
+            feature: "ffmpeg5"
           # FFmpeg 6.x
           - ffmpeg_version: "6.1"
             feature: "ffmpeg6"
