--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
         uses: dtolnay/rust-toolchain@nightly
  
       - name: Test
-        run: cargo +nightly test --all-features
+        run: cargo +nightly test --verbose
 
   lints:
     runs-on: ubuntu-latest
@@ -143,4 +143,4 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Clippy
-        run: cargo clippy --all --all-features -- -D warnings
+        run: cargo clippy --all -- -D warnings
