--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,9 @@ jobs:
       - name: Build
         run: cargo build --no-default-features --features ${{ matrix.feature }} --verbose
 
+      - name: Run Test
+        run: cargo test --no-default-features --features ${{ matrix.feature }} --verbose
+
   build-macos:
     name: build / macos / latest ffmpeg
     runs-on: macos-latest
