--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,9 @@ jobs:
       - name: Build
         run: cargo build --no-default-features --features ffmpeg7 --verbose
 
+      - name: Run Test
+        run: cargo test --verbose
+
   build-windows:
     name: build / windows / latest ffmpeg
     runs-on: windows-latest
@@ -96,6 +99,9 @@ jobs:
 
       - name: Build
         run: cargo build --no-default-features --features ffmpeg7 --verbose
+
+      - name: Run Test
+        run: cargo test --verbose
 
   test:
     runs-on: ubuntu-latest
