--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,15 @@ ffmpeg6 = ["ffmpeg/ffmpeg6", "ffmpeg/link_system_ffmpeg"]
 ffmpeg7 = ["ffmpeg/ffmpeg7", "ffmpeg/link_system_ffmpeg"]
 
 [dependencies]
+url = "2"
+image = "0.25"
+tracing = "0.1"
+image-compare = "0.4"
+uuid = { version = "1.4.0", features = ["v4", "serde"] }
 ffmpeg = { path = "./ffmpeg", default-features = false }
 ndarray = { version = "0.16", optional = true }
-tracing = "0.1"
-url = "2"
 
 [dev-dependencies]
-image = "0.25"
 tokio = { version = "1", features = ["full"] }
 
 [package.metadata.docs.rs]
