--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ url = "2"
 
 [dev-dependencies]
 image = "0.25"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "test-util", "rt-multi-thread"] }
 
 [package.metadata.docs.rs]
 all-features = true
