--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,17 @@ jobs:
     strategy:
       matrix:
         include:
-          - ffmpeg_version: ["5.0", "5.1"]
+          - ffmpeg_version: "5.0"
             feature: "ffmpeg5,ndarray"
-          - ffmpeg_version: ["6.0", "6.1"]
+          - ffmpeg_version: "5.1"
+            feature: "ffmpeg5,ndarray"
+          - ffmpeg_version: "6.0"
             feature: "ffmpeg6,ndarray"
-          - ffmpeg_version: ["7.0", "7.1"]
+          - ffmpeg_version: "6.1"
+            feature: "ffmpeg6,ndarray"
+          - ffmpeg_version: "7.0"
+            feature: "ffmpeg7,ndarray"
+          - ffmpeg_version: "7.1"
             feature: "ffmpeg7,ndarray"
       fail-fast: false
 
@@ -71,7 +77,10 @@ jobs:
 
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@stable
-    
+
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+
       - name: Build
         run: cargo build --no-default-features --features ${{ matrix.feature }} --verbose
 
