--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,8 @@ tracing = "0.1"
 url = "2"
 
 [dev-dependencies]
-oidn = "2.2"
 image = "0.25"
+oidn = {version = "2.2", optional = true}
 tokio = { version = "1", features = ["full"] }
 
 [package.metadata.docs.rs]
