--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,12 +24,18 @@ jobs:
       matrix:
         include:
           # FFmpeg 5.x
+          - ffmpeg_version: "5.0"
+            feature: "ffmpeg5,ndarray"
           - ffmpeg_version: "5.1"
             feature: "ffmpeg5,ndarray"
           # FFmpeg 6.x
+          - ffmpeg_version: "6.0"
+            feature: "ffmpeg6,ndarray"
           - ffmpeg_version: "6.1"
             feature: "ffmpeg6,ndarray"
           # FFmpeg 7.x
+          - ffmpeg_version: "7.0"
+            feature: "ffmpeg7,ndarray"
           - ffmpeg_version: "7.1"
             feature: "ffmpeg7,ndarray"
       fail-fast: false
