update ci, readme

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,11 @@ name: ci
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main", "rsmpeg" ]
     paths-ignore:
       - 'README.md'
   pull_request:
-    branches: [ main ]
+    branches: [ "main", "rsmpeg" ]
     paths-ignore:
       - 'README.md'
 
@@ -23,13 +23,14 @@ jobs:
     strategy:
       matrix:
         include:
-          # FFmpeg 5.x
-          - ffmpeg_version: "5.1"
-            feature: "ffmpeg5,ndarray"
           # FFmpeg 6.x
+          - ffmpeg_version: "6.0"
+            feature: "ffmpeg6,ndarray"
           - ffmpeg_version: "6.1"
             feature: "ffmpeg6,ndarray"
           # FFmpeg 7.x
+          - ffmpeg_version: "7.0"
+            feature: "ffmpeg7,ndarray"
           - ffmpeg_version: "7.1"
             feature: "ffmpeg7,ndarray"
       fail-fast: false
@@ -162,4 +163,4 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Clippy
-        run: cargo clippy --all -- -D warnings
+        run: cargo clippy --all
