--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,9 +23,7 @@ jobs:
     strategy:
       matrix:
         include:
-          # FFmpeg 7.x
           - ffmpeg_version: "7.1"
-            feature: "ffmpeg7,ndarray"
       fail-fast: false
 
     steps:
@@ -41,13 +39,13 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
     
       - name: Build
-        run: cargo build --no-default-features --features ${{ matrix.feature }} --verbose
+        run: cargo build --verbose
 
       # undefined reference to symbol '__tls_get_addr@@GLIBC_2.3'
       # /usr/bin/ld: /lib/x86_64-linux-gnu/ld-linux-x86-64.so.2: error adding symbols: DSO missing from command line
       # collect2: error: ld returned 1 exit status
-#      - name: Run Test
-#        run: cargo test --no-default-features --features ${{ matrix.feature }} --verbose
+      - name: Run Test
+        run: cargo test --verbose -- --nocapture
 
   build-macos:
     name: build / macos / latest ffmpeg
@@ -104,8 +102,8 @@ jobs:
       # TODO: Fix linking error on Windows
       # error: linking with `link.exe` failed: exit code: 1181
       # note: LINK : fatal error LNK1181: cannot open input file 'bin.lib'
-  #      - name: Run Test
-  #        run: cargo test --verbose
+      #- name: Run Test
+      #  run: cargo test --verbose
 
   test:
     runs-on: ubuntu-latest
@@ -120,19 +118,11 @@ jobs:
           DEBIAN_FRONTEND=noninteractive apt-get update
           DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ca-certificates clang curl pkg-config
 
-#     - name: Setup Rust
-#       uses: dtolnay/rust-toolchain@stable
-    
-      # TODO: Temporarily use nightly version of Rust for tests. Stable
-      # currently has a bug that causes linking to fail. The fix is in
-      # https://github.com/rust-lang/rust/commit/9ed0d11efbec18a1fa4155576a3bcb685676d23c
-      # and will hit stable at some point.
-
       - name: Setup Rust
-        uses: dtolnay/rust-toolchain@nightly
- 
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Test
-        run: cargo +nightly test --verbose
+        run: cargo test --verbose
 
   lints:
     runs-on: ubuntu-latest
@@ -155,5 +145,5 @@ jobs:
       - name: Rustfmt
         run: cargo fmt --all -- --check
 
-#      - name: Clippy
-#        run: cargo clippy --all -- -D warnings
+      - name: Clippy
+        run: cargo clippy --all -- -D warnings
