--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  RUST_LOG: debug
   RUST_BACKTRACE: 1
   RUSTFLAGS: "-D warnings"
 
@@ -45,6 +46,8 @@ jobs:
             gnupg \
             libc6 \
             libc6-dev \
+            libgcc-s1 \
+            linux-libc-dev \
             binutils \
             pkg-config \
             libx264-dev \
@@ -67,10 +70,11 @@ jobs:
           [target.x86_64-unknown-linux-gnu]
           linker = "clang"
           rustflags = [
-            "-C", "link-arg=-fuse-ld=lld",
-            "-C", "link-arg=-Wl,--verbose",
+            "-C", "link-arg=-Wl,--no-as-needed",
             "-C", "link-arg=-ldl",
-            "-C", "link-arg=-pthread"
+            "-C", "link-arg=-pthread",
+            "-C", "link-arg=-lc",
+            "-C", "link-arg=-Wl,--copy-dt-needed-entries"
           ]
           EOF
     
@@ -162,6 +166,8 @@ jobs:
             gnupg \
             libc6 \
             libc6-dev \
+            libgcc-s1 \
+            linux-libc-dev \
             binutils \
             pkg-config \
             libx264-dev \
@@ -184,10 +190,11 @@ jobs:
           [target.x86_64-unknown-linux-gnu]
           linker = "clang"
           rustflags = [
-            "-C", "link-arg=-fuse-ld=lld",
-            "-C", "link-arg=-Wl,--verbose",
+            "-C", "link-arg=-Wl,--no-as-needed",
             "-C", "link-arg=-ldl",
-            "-C", "link-arg=-pthread"
+            "-C", "link-arg=-pthread",
+            "-C", "link-arg=-lc",
+            "-C", "link-arg=-Wl,--copy-dt-needed-entries"
           ]
           EOF
 
