--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rsmedia"
+version = "0.1.0"
+edition = "2021"
+build = "build.rs"
 description = "High-level video toolkit based on ffmpeg."
 keywords = ["video", "ffmpeg", "encoding", "decoding", "muxing"]
 categories = ["multimedia", "multimedia::video"]
-version = "0.1.0"
 authors = ["phial3 Developers"]
 license = "MIT OR Apache-2.0"
-edition = "2021"
 repository = "https://github.com/phial3/rsmedia"
 readme = "README.md"
 
