--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "rsmedia"
 version = "0.1.0"
 edition = "2021"
 build = "build.rs"
+license = "MIT"
 description = "High-level video toolkit based on ffmpeg."
 keywords = ["video", "ffmpeg", "encoding", "decoding", "muxing"]
 categories = ["multimedia", "multimedia::video"]
-authors = ["phial3 Developers"]
-license = "MIT OR Apache-2.0"
+authors = ["Oddity.ai Developers <hello@oddity.ai>", "phial3 Developers"]
 repository = "https://github.com/phial3/rsmedia"
 readme = "README.md"
 
@@ -40,6 +40,3 @@ tokio = { version = "1", features = ["full"] }
 
 [package.metadata.docs.rs]
 all-features = true
-
-[profile.dev]
-debug = true
