ndarray frame convert optimize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ cstr = "0.2"
 image = "0.25"
 anyhow = "1.0"
 camino = "1.1"
+chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 
 [package.metadata.docs.rs]
